sale z-index fix

--- a/css/phones.css
+++ b/css/phones.css
@@ -1156,7 +1156,6 @@ div h1.shatterDeal {
     line-height: 35px;
     border-bottom-left-radius: 15px;
     border-top-right-radius: 15px;
-    z-index: 5;
   }
 
   .sale a {
@@ -2711,7 +2710,6 @@ div h1.shatterDeal {
     line-height: 35px;
     border-bottom-left-radius: 15px;
     border-top-right-radius: 15px;
-    z-index: 5;
   }
 
   .sale a {
@@ -4274,7 +4272,6 @@ div h1.shatterDeal {
     line-height: 35px;
     border-bottom-left-radius: 15px;
     border-top-right-radius: 15px;
-    z-index: 5;
   }
 
   .sale a {
@@ -5847,7 +5844,6 @@ div h1.shatterDeal {
     line-height: 35px;
     border-bottom-left-radius: 15px;
     border-top-right-radius: 15px;
-    z-index: 5;
   }
 
   .sale a {
